@@ -298,6 +298,7 @@ AC_DEFUN(SC_ENABLE_SYMBOLS, [
 #		CC_OBJNAME
 #		CC_EXENAME
 #		CYGPATH
+#		STLIB_LD
 #		SHLIB_LD
 #		SHLIB_LD_LIBS
 #		LIBS
@@ -348,13 +349,13 @@ AC_DEFUN(SC_CONFIG_CFLAGS, [
 	SHLIB_LD_LIBS=""
 	LIBS=""
 	LIBS_GUI="-lgdi32 -lcomdlg32 -limm32"
-	STLIB_LD="${AR}"
+	STLIB_LD='${AR} cr'
 	RC_OUT=-o
 	RC_TYPE=
 	RC_INCLUDE=--include
 	RC_DEFINE=--define
 	RES=res.o
-	MAKE_LIB="\${AR} cr \[$]@"
+	MAKE_LIB="\${STLIB_LD} \[$]@"
 	POST_MAKE_LIB="\${RANLIB} \[$]@"
 	MAKE_EXE="\${CC} -o \[$]@"
 	LIBPREFIX="lib"
@@ -429,7 +430,6 @@ AC_DEFUN(SC_CONFIG_CFLAGS, [
 	SHLIB_LD_LIBS="user32.lib advapi32.lib"
 	LIBS="user32.lib advapi32.lib"
 	LIBS_GUI="gdi32.lib comdlg32.lib imm32.lib"
-	AR="lib -nologo"
 	STLIB_LD="lib -nologo"
 	RC="rc"
 	RC_OUT=-fo
@@ -437,7 +437,7 @@ AC_DEFUN(SC_CONFIG_CFLAGS, [
 	RC_INCLUDE=-i
 	RC_DEFINE=-d
 	RES=res
-	MAKE_LIB="\${AR} -out:\[$]@"
+	MAKE_LIB="\${STLIB_LD} -out:\[$]@"
 	POST_MAKE_LIB=
 	MAKE_EXE="\${CC} -Fe\[$]@"
 	LIBPREFIX=""
